Upload Logo_Arlesiana.jpg, override Bootstrap css with navbar-log id. Style the Arlesiana-logo with fixed height object-fit and border-radius 50%, Add flex class to <a> element, wrap the text part in a span with margin start.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -105,6 +105,14 @@ p:a {
 
 /* Identity styles */
 
+#navbar-logo {
+    height: 50px;
+    width: auto; 
+    border-radius: 50% !important;
+    object-fit: cover;
+    margin: 1px;
+}
+
 #bmc-container { /*likely obsolete - to remove*/
     position: relative;
     width: 300px; 
